# fembot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: dllmain.cpp  fembot.cpp  fembot.hpp  hooks.cpp  hooks.hpp  includes.h
src/fembot/: fembot.cpp  fembot.hpp
src/fembot/gui/: gui.cpp  gui.hpp
src/fembot/hooks/: hooks.cpp  hooks.hpp
src/fembot/practice_fixes/: practice_fixes.hpp
src/fembot/replay/: replay.cpp  replay.hpp
src/fembot/replay_system/: replay_system.hpp
src/fembot/replay_system/extends/: frame_advance.cpp  rs_actions.cpp
src/imgui-hook/: imgui_hook.cpp
src/imgui-hook/imgui/: imgui.cpp
src/utilities/: utilities.cpp  utilities.hpp
